--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,10 @@
             src="https://maps.googleapis.com/maps/api/js">
     </script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <!--<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>-->
     <script type="text/javascript">
         var map;
-        var markers = [];
+        var markers = {};
 
         function initialize() {
             var mapOptions = {
@@ -22,11 +23,38 @@
         }
 
         function refresh() {
-            clearMarkers();
             $.getJSON('/api/all', function(messages) {
                 for (var i=0; i<messages.length; i++) {
-                    var myLatlng = new google.maps.LatLng(messages[i].loc[1], messages[i].loc[0]);
-                    addMarker(myLatlng, messages[i].message)
+
+                    if (messages[i].messageID in markers) {
+//                        console.log("moving " + messages[i].messageID);
+                        var marker = markers[messages[i].messageID];
+                        var originalLatitude = marker.getPosition().lat();
+                        var originalLongitude = marker.getPosition().lng();
+
+
+                        $({
+                            latitude: originalLatitude,
+                            longitude: originalLongitude,
+                            marker: marker
+                        }).animate({
+                            latitude: messages[i].loc[1],
+                            longitude: messages[i].loc[0]
+                        }, {
+                            duration: 500,
+                            step: function() {
+                                var myLatlng = new google.maps.LatLng(this.latitude, this.longitude);
+                                this.marker.setPosition(myLatlng);
+                            }
+                        });
+                    } else {
+                        var myLatlng = new google.maps.LatLng(messages[i].loc[1], messages[i].loc[0]);
+                        markers[messages[i].messageID] = new google.maps.Marker({
+                            position: myLatlng,
+                            map: map,
+                            title: messages[i].message
+                        });
+                    }
                 }
             });
         }
@@ -34,39 +62,6 @@
         setInterval(function() {
             refresh();
         }, 2000);
-
-        // Add a marker to the map and push to the array.
-        function addMarker(location, message) {
-            var marker = new google.maps.Marker({
-                position: location,
-                map: map,
-                title: message
-            });
-            markers.push(marker);
-        }
-
-        // Sets the map on all markers in the array.
-        function setAllMap(map) {
-            for (var i = 0; i < markers.length; i++) {
-                markers[i].setMap(map);
-            }
-        }
-
-        // Removes the markers from the map, but keeps them in the array.
-        function clearMarkers() {
-            setAllMap(null);
-        }
-
-        // Shows any markers currently in the array.
-        function showMarkers() {
-            setAllMap(map);
-        }
-
-        // Deletes all markers in the array by removing references to them.
-        function deleteMarkers() {
-            clearMarkers();
-            markers = [];
-        }
 
         google.maps.event.addDomListener(window, 'load', initialize);
     </script>
