--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
                         }).animate({
                             latitude: messages[i].loc[1],
                             longitude: messages[i].loc[0],
-                            radius: messages[i].loc_found ? 0 : deltaToMeters(messages[i].loc_covariance, originalLatitude)
+                            radius: messages[i].loc_found ? 0 : deltaToMeters(4*messages[i].loc_covariance, originalLatitude)
                         }, {
                             duration: 1000,
                             easing: 'linear',
@@ -96,7 +96,7 @@
                                 fillOpacity: 0.35,
                                 map: map,
                                 center: myLatlng,
-                                radius: messages[i].loc_found ? 0 : deltaToMeters(messages[i].loc_covariance, messages[i].loc[1])
+                                radius: messages[i].loc_found ? 0 : deltaToMeters(4*messages[i].loc_covariance, messages[i].loc[1])
                             })
                         };
                     }
