--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,6 @@
         html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
     </style>
     <script type="text/javascript"
-            src="https://maps.googleapis.com/maps/api/js">
-    </script>
-    <script type="text/javascript"
             src="https://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=true">
     </script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -17,10 +14,154 @@
         var markers = {};
         var lastUpdated = -1;
 
+        var mapStyle = [
+            {
+                "stylers": [
+                    { "visibility": "off" }
+                ]
+            },{
+                "featureType": "administrative",
+                "elementType": "geometry.stroke",
+                "stylers": [
+                    { "visibility": "on" },
+                    { "color": "#8f9190" },
+                    { "weight": 0.5 }
+                ]
+            },{
+                "featureType": "landscape.man_made",
+                "stylers": [
+                    { "visibility": "off" }
+                ]
+            },{
+                "featureType": "landscape",
+                "elementType": "geometry.fill",
+                "stylers": [
+                    { "visibility": "on" },
+                    { "color": "#4b4b4a" }
+                ]
+            },{
+                "featureType": "administrative.country",
+                "elementType": "labels.text.fill",
+                "stylers": [
+                    { "visibility": "on" },
+                    { "color": "#dedede" }
+                ]
+            },{
+                "featureType": "administrative.province",
+                "elementType": "labels.text.fill",
+                "stylers": [
+                    { "visibility": "on" },
+                    { "color": "#3d3e3d" }
+                ]
+            },{
+                "featureType": "administrative.locality",
+                "elementType": "labels.text.fill",
+                "stylers": [
+                    { "visibility": "on" },
+                    { "color": "#cccccc" }
+                ]
+            },{
+                "featureType": "administrative.locality",
+                "elementType": "labels.text.stroke",
+                "stylers": [
+                    { "visibility": "off" }
+                ]
+            },{
+                "featureType": "water",
+                "stylers": [
+                    { "visibility": "on" },
+                    { "color": "#27231f" }
+                ]
+            },{
+                "featureType": "road",
+                "elementType": "labels.text.fill",
+                "stylers": [
+                    { "visibility": "on" },
+                    { "color": "#dddddd" }
+                ]
+            },{
+                "featureType": "road.highway",
+                "elementType": "geometry.fill",
+                "stylers": [
+                    { "visibility": "on" },
+                    { "color": "#9b9b9b" },
+                    { "weight": 1.1 }
+                ]
+            },{
+                "featureType": "road.arterial",
+                "elementType": "geometry.fill",
+                "stylers": [
+                    { "visibility": "on" },
+                    { "weight": 0.9 },
+                    { "color": "#a7a7a7" }
+                ]
+            },{
+                "featureType": "road.highway",
+                "elementType": "geometry.stroke",
+                "stylers": [
+                    { "visibility": "off" },
+                    { "weight": 0.5 },
+                    { "color": "#8f9190" }
+                ]
+            },{
+                "featureType": "road.local",
+                "elementType": "geometry.fill",
+                "stylers": [
+                    { "visibility": "on" },
+                    { "color": "#8f9190" },
+                    { "weight": 0.5 }
+                ]
+            },{
+                "featureType": "road.arterial",
+                "elementType": "labels.icon",
+                "stylers": [
+                    { "visibility": "on" },
+                    { "invert_lightness": true }
+                ]
+            },{
+                "featureType": "road.arterial",
+                "elementType": "labels",
+                "stylers": [
+                    { "visibility": "off" }
+                ]
+            },{
+                "featureType": "road.highway",
+                "elementType": "labels",
+                "stylers": [
+                    { "visibility": "off" }
+                ]
+            },{
+                "featureType": "road.highway",
+                "elementType": "labels.icon",
+                "stylers": [
+                    { "visibility": "off" }
+                ]
+            },{
+                "featureType": "administrative.land_parcel",
+                "stylers": [
+                    { "visibility": "off" }
+                ]
+            },{
+                "featureType": "administrative.neighborhood",
+                "stylers": [
+                    { "visibility": "off" }
+                ]
+            },{
+                "featureType": "water",
+                "elementType": "labels",
+                "stylers": [
+                    { "visibility": "off" }
+                ]
+            },{
+                "featureType": "road"
+            }
+        ];
+
         function initialize() {
             var mapOptions = {
                 center: { lat: 40.3487, lng: -74.6593},
-                zoom: 8
+                zoom: 8,
+                styles: mapStyle
             };
             map = new google.maps.Map(document.getElementById('map-canvas'),
                     mapOptions);
@@ -105,9 +246,31 @@
             lastUpdated = Date.now();
         }
 
-        setInterval(function() {
-            refresh();
-        }, 1000);
+        function heatmap() {
+            $.getJSON('/api/all', function(messages) {
+                var heatMapData = [];
+                for (var i=0; i<messages.length; i++) {
+                    heatMapData.push({
+                        location: new google.maps.LatLng(messages[i].loc[1], messages[i].loc[0]),
+                        weight: messages[i].numberOfLikes > 0 ? messages[i].numberOfLikes : 0
+                    });
+                    console.log(messages[i].numberOfLikes, messages[i].message);
+                }
+                var heatmap = new google.maps.visualization.HeatmapLayer({
+                    data: heatMapData,
+                    radius: 200,
+                    gradient: ["rgba(87, 226, 202, 0)", "rgba(87, 226, 202, 255)"],
+                    opacity: 0.8
+                });
+                heatmap.setMap(map);
+            });
+        }
+
+        heatmap();
+
+//        setInterval(function() {
+//            refresh();
+//        }, 1000);
 
         google.maps.event.addDomListener(window, 'load', initialize);
     </script>
