--- a/public/index.html
+++ b/public/index.html
@@ -276,6 +276,6 @@
     </script>
 </head>
 <body>
-<div id="map-canvas"></div>
+<div id="map-canvas" style="background-color: #27231F;"></div>
 </body>
 </html>
