--- a/public/index.html
+++ b/public/index.html
@@ -218,33 +218,41 @@
         function refresh(messages) {
             for (var i=0; i<messages.length; i++) {
                 if (messages[i].messageID in markers) {
-//                        console.log("moving " + messages[i].messageID);
                     var marker = markers[messages[i].messageID].marker;
-//                        var circle = markers[messages[i].messageID].circle;
                     var originalLatitude = marker.getPosition().lat();
                     var originalLongitude = marker.getPosition().lng();
-//                        var originalRadius = circle.getRadius();
+
+                    var circle = markers[messages[i].messageID].circle;
+                    var animateCircle = false;
+                    if (circle != null) {
+                        if (messages[i].loc_found) {
+                            circle.setMap(null);
+                        } else {
+                            var originalRadius = circle.getRadius();
+                            animateCircle = true;
+                        }
+                    }
 
                     $({
                         latitude: originalLatitude,
                         longitude: originalLongitude,
-//                            radius: originalRadius,
+                        radius: originalRadius,
                         marker: marker,
-//                            circle: circle,
-//                            animateCircle: (originalRadius != 0)
+                        circle: circle,
+                        animateCircle: animateCircle
                     }).animate({
                         latitude: messages[i].loc[1],
                         longitude: messages[i].loc[0],
-//                            radius: messages[i].loc_found ? 0 : deltaToMeters(messages[i].loc_covariance, originalLatitude)
+                        radius: Math.max(1000, deltaToMeters(messages[i].loc_covariance, originalLatitude))
                     }, {
                         duration: 1000,
                         step: function() {
                             var myLatlng = new google.maps.LatLng(this.latitude, this.longitude);
                             this.marker.setPosition(myLatlng);
-//                                if (this.animateCircle) {
-//                                    this.circle.setCenter(myLatlng);
-//                                    this.circle.setRadius(this.radius);
-//                                }
+                            if (this.animateCircle) {
+                                this.circle.setCenter(myLatlng);
+                                this.circle.setRadius(this.radius);
+                            }
                         }
                     });
                 } else {
@@ -263,18 +271,21 @@
                                     fillOpacity: 1,
                                     strokeOpacity: 1
                                 }
-                        }),
-//                            circle: new google.maps.Circle({
-//                                strokeColor: '#FF0000',
-//                                strokeOpacity: 0.8,
-//                                strokeWeight: 2,
-//                                fillColor: '#FF0000',
-//                                fillOpacity: 0.35,
-//                                map: map,
-//                                center: myLatlng,
-//                                radius: messages[i].loc_found ? 0 : deltaToMeters(messages[i].loc_covariance, messages[i].loc[1])
-//                            })
+                        })
                     };
+
+                    if (!messages[i].loc_found) {
+                        markers[messages[i].messageID].circle = new google.maps.Circle({
+                            strokeColor: '#FFFFFF',
+                            strokeOpacity: 0.7,
+                            strokeWeight: 2,
+                            fillColor: '#FFFFFF',
+                            fillOpacity: 0.3,
+                            map: map,
+                            center: myLatlng,
+                            radius: 1000
+                        });
+                    }
 
                     (function(marker, message) {
                         var infowindow = new google.maps.InfoWindow({
