--- a/public/index.html
+++ b/public/index.html
@@ -176,6 +176,13 @@
             var mapOptions = {
                 center: { lat: 40.3487, lng: -74.6593},
                 zoom: 8,
+                mapTypeControl: false,
+                panControl: false,
+                streetViewControl: false,
+                zoomControl: true,
+                zoomControlOptions: {
+                    style: google.maps.ZoomControlStyle.SMALL
+                },
                 styles: mapStyle
             };
             map = new google.maps.Map(document.getElementById('map-canvas'),
