Bugfix in first load notifications

--- a/public/index.html
+++ b/public/index.html
@@ -314,10 +314,11 @@
                         setTimeout(function() {
                             notification.close();
                         }, 3000);
-                    } else {
-                        firstLoad = false;
                     }
                 }
+            }
+            if (firstLoad) {
+                firstLoad = false;
             }
         }
 
