--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,38 @@
 <head>
     <title>YikYak Map</title>
     <style type="text/css">
-        html, body, #map-canvas { height: 100%; margin: 0; padding: 0; font-family: Arial; }
+        html, body, #map-canvas { height: 100%; margin: 0; padding: 0; font-family: Helvetica Neue, Helvetica, Arial, sans-serif; }
+        #school-select {
+            color: #eeeeee;
+            background-color: black;
+            text-align: center;
+            z-index: 1000;
+            padding: 50px;
+            width: 500px;
+            height: 400px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            margin-top: -200px;
+            margin-left: -250px;
+            box-shadow: 0 0 100px rgba(0, 0, 0, 0.8);
+            -webkit-transition: 0.5s opacity;
+        }
+        #schools {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+        #schools li a {
+            padding: 10px;
+            display: block;
+            color: inherit;
+            text-decoration: none;
+            font-size: 20px;
+        }
+        #schools li a:hover {
+            background-color: #333333;
+        }
     </style>
     <link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet">
 
@@ -22,6 +53,7 @@
         var schools = {};
         var heatMapData;
         var firstLoad = true;
+        var socket = io();
 
         window.onclick = function() {
             Notification.requestPermission();
@@ -191,15 +223,27 @@
             $.getJSON('/schools.json', function(data) {
                 for (var i=0; i<data.length; i++) {
                     schools[data[i].name] = data[i];
+                    var $elem = $('<li><a href="#"></a></li>');
+                    $elem.appendTo('#schools').find('a').text(data[i].name).click(function(e) {
+                        e.preventDefault();
+                        $("#school-select").css({opacity: 0}).delay(500).queue(function() {
+                            $(this).css('display', 'none');
+                        });
+                        var schoolName = $(this).text();
+                        goTo(schoolName, function() {
+                            heatmap(schoolName);
+                            socket.emit('subscribe', {room: schoolName});
+                            socket.on('messages', function(messages) {
+                                refresh(messages);
+                            });
+                            socket.on('message_found', function(message) {
+                                heatMapData.push(new google.maps.LatLng(message.loc[1], message.loc[0]));
+                                console.log(message);
+                            });
+
+                        });
+                    });
                 }
-                var socket = io();
-                socket.on('messages', function(messages) {
-                    refresh(messages);
-                });
-                socket.on('message_found', function(message) {
-                    heatMapData.push(new google.maps.LatLng(message.loc[1], message.loc[0]));
-                    console.log(message);
-                });
             });
         }
 
@@ -250,7 +294,7 @@
                     }).animate({
                         latitude: messages[i].loc[1],
                         longitude: messages[i].loc[0],
-                        radius: Math.max(1000, deltaToMeters(messages[i].loc_covariance, originalLatitude))
+                        radius: Math.min(1000, deltaToMeters(messages[i].loc_covariance, originalLatitude))
                     }, {
                         duration: 1000,
                         step: function() {
@@ -326,10 +370,28 @@
             return "rgb(" + schools[schoolName].color[0] + "," + schools[schoolName].color[1] + "," + schools[schoolName].color[2] + ")";
         }
 
-        function heatmap() {
+        function goTo(schoolName, callback) {
+            smoothZoom(map, 15, map.getZoom(), callback);
+            map.panTo(new google.maps.LatLng(schools[schoolName].loc[1], schools[schoolName].loc[0]));
+        }
+
+        function smoothZoom (map, max, cnt, callback) {
+            if (cnt >= max) {
+                if (callback) callback();
+            }
+            else {
+                z = google.maps.event.addListener(map, 'zoom_changed', function(event){
+                    google.maps.event.removeListener(z);
+                    smoothZoom(map, max, cnt + 1, callback);
+                });
+                setTimeout(function(){map.setZoom(cnt)}, 80); // 80ms is what I found to work well on my system -- it might not work well on all systems
+            }
+        }
+
+        function heatmap(schoolName) {
             var pastDay = new Date();
             pastDay.setHours(pastDay.getHours() - 24);
-            $.getJSON('/api/new?since=' + (+pastDay), function(messages) {
+            $.getJSON('/api/new?since=' + (+pastDay) + "&schoolName=" + encodeURIComponent(schoolName), function(messages) {
                 var heatMapDataArray = [];
                 for (var i=0; i<messages.length; i++) {
                     heatMapDataArray.push(new google.maps.LatLng(messages[i].loc[1], messages[i].loc[0]));
@@ -337,21 +399,23 @@
                 heatMapData = new google.maps.MVCArray(heatMapDataArray);
                 var heatmap = new google.maps.visualization.HeatmapLayer({
                     data: heatMapData,
-                    radius: 100,
+                    radius: 50,
                     gradient: ["rgba(87, 226, 202, 0)", "rgba(87, 226, 202, 255)"],
-                    opacity: 0.9,
-                    dissipating: false
+                    opacity: 0.9
                 });
                 heatmap.setMap(map);
             });
         }
 
-        heatmap();
-
         google.maps.event.addDomListener(window, 'load', initialize);
     </script>
 </head>
 <body>
+<div id="school-select">
+    <h1>YikYak Map</h1>
+    <h2>Choose a Campus</h2>
+    <ul id="schools"></ul>
+</div>
 <div id="map-canvas" style="background-color: #27231F;"></div>
 </body>
 </html>
