--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>YikYak Map</title>
+    <title>WhatTheYak - YikYak Explorer</title>
     <style type="text/css">
         html, body, #map-canvas { height: 100%; margin: 0; padding: 0; font-family: Helvetica Neue, Helvetica, Arial, sans-serif; }
         #school-select {
@@ -316,9 +316,9 @@
                                 icon: {
                                     path: google.maps.SymbolPath.CIRCLE,
                                     scale: 10,
-                                    strokeColor: '#9b9b9b',
+                                    strokeColor: getSchoolColor(messages[i].schoolName),
                                     strokeWeight: 2,
-                                    fillColor: getSchoolColor(messages[i].schoolName),
+                                    fillColor: 'white',
                                     fillOpacity: 1,
                                     strokeOpacity: 1
                                 }
@@ -412,7 +412,7 @@
 </head>
 <body>
 <div id="school-select">
-    <h1>YikYak Map</h1>
+    <h1>WhatTheYak - YikYak Explorer</h1>
     <h2>Choose a Campus</h2>
     <ul id="schools"></ul>
 </div>
