--- a/public/index.html
+++ b/public/index.html
@@ -26,11 +26,18 @@
             margin: 0;
         }
         #schools li a {
-            padding: 10px;
+            padding: 12px;
             display: block;
             color: inherit;
             text-decoration: none;
             font-size: 20px;
+            text-align: left;
+        }
+        #schools li a .right {
+            float: right;
+            text-align: right;
+            font-size: 15px;
+            margin-top: -4px;
         }
         #schools li a:hover {
             background-color: #333333;
@@ -54,6 +61,7 @@
         var heatMapData;
         var firstLoad = true;
         var socket = io();
+        var schoolSelectVisible = true;
 
         window.onclick = function() {
             Notification.requestPermission();
@@ -223,13 +231,14 @@
             $.getJSON('/schools.json', function(data) {
                 for (var i=0; i<data.length; i++) {
                     schools[data[i].name] = data[i];
-                    var $elem = $('<li><a href="#"></a></li>');
-                    $elem.appendTo('#schools').find('a').text(data[i].name).click(function(e) {
+                    var $elem = $('<li><a href="#"><div class="left"><span></span><div class="right"></div></div></a></li>');
+                    $elem.appendTo('#schools').find('a').click(function(e) {
                         e.preventDefault();
+                        schoolSelectVisible = false;
                         $("#school-select").css({opacity: 0}).delay(500).queue(function() {
                             $(this).css('display', 'none');
                         });
-                        var schoolName = $(this).text();
+                        var schoolName = $(this).find('span').text();
                         goTo(schoolName, function() {
                             heatmap(schoolName);
                             socket.emit('subscribe', {room: schoolName});
@@ -242,6 +251,13 @@
                             });
 
                         });
+                    }).find('span').text(data[i].name);
+                    socket.on('schoolStats', function(data) {
+                        var $schools = $("#school-select li a");
+                        for (var i=0; i<data.length; i++) {
+                            $schools.eq(i).find('.right').html(
+                                            "Avg. Score " + parseFloat(data[i].averageScore).toFixed(2) + "<br />" + data[i].count + " Posts");
+                        }
                     });
                 }
             });
