--- a/public/index.html
+++ b/public/index.html
@@ -332,9 +332,9 @@
                                 icon: {
                                     path: google.maps.SymbolPath.CIRCLE,
                                     scale: 10,
-                                    strokeColor: getSchoolColor(messages[i].schoolName),
+                                    strokeColor: '#dddddd',
                                     strokeWeight: 2,
-                                    fillColor: 'white',
+                                    fillColor: getSchoolColor(messages[i].schoolName),
                                     fillOpacity: 1,
                                     strokeOpacity: 1
                                 }
